--- a/web2.html
+++ b/web2.html
@@ -1,5 +1,8 @@
 <html>
 	<head>
+		<center><title><h1>Everything to Know About Clay Clements</h1></center></title>
+		<h2>By: Clay M. Clements</h2>
+		</center>
 
 
 
