--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+  <head>
+    <center>
+      <title><h1>Everything You Need to Know About Clay!</h1></title>
+      <h2>By: Clay M. Clements</h2>
+    </center>
+  </head>  
 
 
 
