--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <html>
   <head>
-    <center>
-      <title><h1>Everything You Need to Know About Clay!</h1></title>
-      <h2>By: Clay M. Clements</h2>
-    </center>
-  </head>  
+    <title> Clay Clements </title>
+  </head>
+  <body style="background:url(Woodwallpaper.jpg); background-size:100% 100%;">
+     <center><h1><font size="+25"/> All About Clay</h1></center>
+               <center><font size="+2"/> By: Clay M. Clements</center>
+               <hr>
+               <center> <img src="http://snagfilms-a.akamaihd.net/2c/01/5700ad96442c8871e692e6295de7/183-lacrosse-483jpg" height"500" width="500"> </center>
+               <center><font color="white"> This photo is of a typical faceoff as the ref blows the starting whistle at the start of the game, or the restart of the game after a point was scored. </center>
+               <center><font color="white"> As you have clicked on this cite, you must be wondering about how a faceoff works. </center>
+               <center><font color="white"> Here is a list of links to show how to faceoff and the good techniques to become a better faceoff specialist: </center>
+               <center><table width="50%" style="background-color:black;border:2px solid white";></center>
+                  <tr>
+                        <th><h1><font color="white">Techniques</h1></th>
+                        <th><h1><font color="white">How to Faceoff</h1></th>
+                        <th><h1><font color="white">Tips</h1></th> 
+                  </tr>
+                  <tr>
+                        <td><font color="white"><a href="https://www.youtube.com/watch?v=jiZ7MMU5IW4">Faceoff Techniques</a></td>
+                  </tr>
+  </body>
+  
 
 
 
