--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <tr>
                         <td><font color="white"><a href="https://www.youtube.com/watch?v=jiZ7MMU5IW4">Faceoff Techniques</a></td>
                   </tr>
-     <a href="
+                 <a href="https://cmclements19.github.io/second-website/web2.html"> Second Page </a>
   </body>
   
 
