--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
                <center><font color="white"> Here is a list of the some of his favorite things: </center>
                <center><table width="50%" style="background-color:black;border:2px solid white";></center>
                   <tr>
-                        <th><h1><font color="white">Techniques</h1></th>
-                        <th><h1><font color="white">How to Faceoff</h1></th>
-                        <th><h1><font color="white">Tips</h1></th> 
+                        <th><h1><font color="white">Hobbies</h1></th>
+                        <th><h1><font color="white">Sports</h1></th>
+                        <th><h1><font color="white">Food</h1></th> 
                   </tr>
                   <tr>
-                        <td><font color="white"><a href="https://www.youtube.com/watch?v=jiZ7MMU5IW4">Faceoff Techniques</a></td>
+                        <td><font color="white"><a href="https://www.youtube.com/watch?v=guzRl2WE9dw">Horseback riding</a></td>
+                        <td><font color="white"><a href="https://www.youtube.com/watch?v=kaZjGKdbGBQ">Lacrosse</a></td>
                   </tr>
                  <a href="https://cmclements19.github.io/second-website/web2.html"> Second Page </a>
   </body>
