--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                         <td><font color="white"><a href="https://www.youtube.com/watch?v=kaZjGKdbGBQ">Lacrosse</a></td>
                   </tr>
                  <a href="https://cmclements19.github.io/second-website/web2.html"> Second Page </a>
+                 <a href="https://cmclements19.github.io/second-website/web3.html"> Third Page </a>
   </body>
   
 
