--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                <hr>
                <center> <img src="Welcome.jpg" height"500" width="500"> </center>
                <center><font color="white"> As you have clicked on this cite, you must be wanting to learn all about the legend of a man, Clay Clements. </center>
-               <center><font color="white"> Here is a list of the some of his favorite things: </center>
+               <center><font color="white"> Here is a small list of the some of his favorite things with links about them: </center>
                <center><table width="50%" style="background-color:black;border:2px solid white";></center>
                   <tr>
                         <th><h1><font color="white">Hobbies</h1></th>
