--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
                <center><font size="+2"/> By: Clay M. Clements</center>
                <hr>
     <div class="topnav">
-                 <br>
-                 <br>
+                 <br><a href="https://cmclements19.github.io/second-website/web2.html"> Second Page </a>
+                 <br> <a href="https://cmclements19.github.io/second-website/web3.html"> Third Page </a>
                  <br>
     </div>
                <center> <img src="Welcome.jpg" height"500" width="500"> </center>
