--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
      <center><h1><font size="+25"/> All About Clay</h1></center>
                <center><font size="+2"/> By: Clay M. Clements</center>
                <hr>
-    
+  <div class="topnav">
+     <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
+     <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
+     <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
+  </div>
                <center> <img src="Welcome.jpg" height"500" width="500"> </center>
                <center><font color="white"> As you have clicked on this cite, you must be wanting to learn all about the legend of a man, Clay Clements. </center>
                <center><font color="white"> Here is a small list of the some of his favorite things with links about them: </center>
