--- a/web2.html
+++ b/web2.html
@@ -7,6 +7,11 @@
 
 
 	</head>
+		<div class="topnav">
+     		   <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
+                   <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
+                   <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
+      		</div>
 
 
 
