--- a/web3.html
+++ b/web3.html
@@ -1,4 +1,15 @@
 <html>
+  <head>
+    <div class="topnav">
+     <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
+     <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
+     <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
+    </div>
+  </head>
+  
+      <body>
+        
+      </body>
 
 
 
