--- a/web2.html
+++ b/web2.html
@@ -1,12 +1,11 @@
 <html>
 	<head>
-		<center><title><h1>Everything to Know About Clay Clements</h1></center></title>
-		<h2>By: Clay M. Clements</h2>
-		</center>
-
-
-
-	</head>
+    		<title> Clay Clements </title>
+  	</head>
+  		<body style="background:url(Woodwallpaper.jpg); background-size:100% 100%;">
+    		<center><h1><font size="+25"/> All About Clay</h1></center>
+                <center><font size="+2"/>Hobbies/Sports</center>
+                <hr>
 		<div class="topnav">
      		   <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
                    <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
