--- a/web3.html
+++ b/web3.html
@@ -1,5 +1,11 @@
 <html>
   <head>
+    <title> Clay Clements </title>
+  </head>
+      <body style="background:url(Woodwallpaper.jpg); background-size:100% 100%;">
+      <center><h1><font size="+25"/> All About Clay</h1></center>
+      <center><font size="+2"/>Early Life</center>
+      <hr>
     <div class="topnav">
      <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
      <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
