--- a/web3.html
+++ b/web3.html
@@ -14,7 +14,7 @@
   </head>
   
       <body>
-        <center><h1><font size="+25"/>Early Life</h1></center
+        <center><h1><font size="+25"/><u>Early Life</u></h1></center
         
       </body>
 
