--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                  <a href="https://cmclements19.github.io/second-website/web3.html"> Third Page </a>
   </body>
   
-<div class="footer">
-  <p>Clay Clements - Period 2 - Advanced Website</p>
-</div>
+              <div class="footer">
+                <center><p>Clay Clements - Period 2 - Advanced Website</p></center>
+              </div>
 
 
 
