--- a/web2.html
+++ b/web2.html
@@ -21,7 +21,7 @@
 		</body>
 
 <div class="footer">
-  <p>Clay Clements - Period 2 - Advanced Website</p>
+	<center><p>Clay Clements - Period 2 - Advanced Website</p></center>
 </div>
 
 
