--- a/web3.html
+++ b/web3.html
@@ -21,7 +21,7 @@
 
 
 <div class="footer">
-  <p>Clay Clements - Period 2 - Advanced Website</p>
+  <center><p>Clay Clements - Period 2 - Advanced Website</p></center>
 </div>
 
 
