--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
                   <tr>
                         <td><font color="white"><a href="https://www.youtube.com/watch?v=guzRl2WE9dw">Horseback riding</a></td>
                         <td><font color="white"><a href="https://www.youtube.com/watch?v=kaZjGKdbGBQ">Lacrosse</a></td>
+                        <td><font color="white"><a href="https://www.youtube.com/watch?v=9QUpTeTVPJo">Sushi</a></td>
                   </tr>
-                 <a href="https://cmclements19.github.io/second-website/web2.html"> Second Page </a>
-                 <a href="https://cmclements19.github.io/second-website/web3.html"> Third Page </a>
+                  <tr>
+                        <td><font color="white"><a href="https://www.youtube.com/watch?v=gnCqFU2Zf7Y">Hunting</a></td>
+                        <td><font color="white"><a href="https://www.youtube.com/watch?v=1TC0YsDvUcgY">Football</a></td>
+                        <td><font color="white"><a href="https://www.youtube.com/watch?v=AmC9SmCBUj4">Steak</a></td>
+                  </tr>
+                 
   </body>
   
               <div class="footer">
