--- a/web2.html
+++ b/web2.html
@@ -16,6 +16,26 @@
 
 		<body>
 			<center><h1><font size="+25"/><u>Hobbies/Sports</u></h1></center>
+			/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+    .column {
+        width: 100%;
+    }
+}
 
 
 		</body>
