--- a/web2.html
+++ b/web2.html
@@ -16,7 +16,7 @@
 
 		<body>
 			<center><h1><font size="+25"/><u>Hobbies/Sports</u></h1></center>
-		
+			<p> This page is all about his hobbies</p>
 
 		</body>
 
