--- a/web2.html
+++ b/web2.html
@@ -10,13 +10,22 @@
      		   <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
                    <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
                    <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
-      		</div>
-
-
-
+      		</div>		
 		<body>
 			<center><h1><font size="+25"/><u>Hobbies/Sports</u></h1></center>
-			This page is all about his hobbies
+				<div class="row">
+  <div class="column">
+    <h2>Horseback Riding</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+  </div>
+  <div class="column">
+    <h2>Hunting</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+  </div>
+  <div class="column">
+    <h2>Building Cars</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+  </div>
 
 		</body>
 
