--- a/web2.html
+++ b/web2.html
@@ -17,6 +17,7 @@
   					<div class="column">
     						<h2><font color="white">Horseback Riding</h2>
     						<p><font color="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+						<center> <img src="horseback.jpg" height"500" width="500"> </center>
   					</div>
   					<div class="column">
     						<h2><font color="white">Hunting</h2>
