--- a/web2.html
+++ b/web2.html
@@ -16,7 +16,7 @@
 				<div class="row">
   					<div class="column">
     						<h2><font color="white">Horseback Riding</h2>
-    						<p><font color="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    						<p><font color="white"><font size="-20">Clay's passion for riding and training horses started from when he was born. As soon as he was born, his mother threw him on a horse and he was addicted ever since. The passion for horses has made him into the person he is tolday and he always says that when he rides, it brings him to his inner peace and harmony. His love for horses will never die and he will strive to make himself a better horseman every time he gets on a horse.</p>
 						<center> <img src="horseback.jpg" height"500" width="500"> </center>
   					</div>
   					<div class="column">
