--- a/web2.html
+++ b/web2.html
@@ -17,7 +17,7 @@
   					<div class="column">
     						<h2><font color="white">Horseback Riding</h2>
     						<p><font color="white">Clay's passion for riding and training horses started from when he was born. As soon as he was born, his mother threw him on a horse and he was addicted ever since. The passion for horses has made him into the person he is tolday and he always says that when he rides, it brings him to his inner peace and harmony. His love for horses will never die and he will strive to make himself a better horseman every time he gets on a horse.</p>
-						<center> <img src="horseback.jpg" height"500" width="500"> </center>
+						<center> <img src="clayhorse.jpg" height"500" width="500"> </center>
   					</div>
   					<div class="column">
     						<h2><font color="white">Hunting</h2>
