--- a/web2.html
+++ b/web2.html
@@ -21,7 +21,8 @@
   					</div>
   					<div class="column">
     						<h2><font color="white">Hunting</h2>
-    						<p><font color="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    						<p><font color="white">Ever since Clay was given his first hunting shotgun, he was in love with hunting from then on. Throughout his life, starting as a small boy, he has hunted many times for a variety of different game. Some of the game he hunted were: dove, quail, wild boar, wild turkey, and even tree squirrels! His favorite game to hunt to this day is the wild boar due to the immense feeling of accomplishment of ending a hunt, but also a farmer's torment due to the boar's destructive affect on crops. He also looks forward to hunting elk and deer later on in his life, which will hopefully happen in the near future! </p>
+						<center> <img src="hunting.jpg" height"500" width="500"> </center>
   					</div>
   					<div class="column">
    						<h2><font color="white">Building Cars</h2>
