--- a/web2.html
+++ b/web2.html
@@ -16,7 +16,7 @@
 				<div class="row">
   					<div class="column">
     						<h2><font color="white">Horseback Riding</h2>
-    						<p><font color="white">Clay's passion for riding and training horses started from when he was born. As soon as he was born, his mother threw him on a horse and he was addicted ever since. The passion for horses has made him into the person he is tolday and he always says that when he rides, it brings him to his inner peace and harmony. His love for horses will never die and he will strive to make himself a better horseman every time he gets on a horse.</p>
+    						<p><font color="white">Clay's passion for riding and training horses started from when he was born. As soon as he was born, his mother threw him on a horse and he was addicted ever since. The passion for horses has made him into the person he is today and he always says that when he rides, it brings him to his inner peace and harmony. His love for horses will never die and he will strive to make himself a better horseman every time he gets on a horse.</p>
 						<center> <img src="clayhorse.JPG" height"500" width="500"> </center>
   					</div>
   					<div class="column">
@@ -26,7 +26,9 @@
   					</div>
   					<div class="column">
    						<h2><font color="white">Building Cars</h2>
-    						<p><font color="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    						<p><font color="white">The most relatively new passion of Clay's, is building cars. His first truck is a 1956 Ford F100 that he is still custom building to this day. From when he was born, he had a passion of cars passed on to him and he has turned it into a full-blow addiction. He cannot stop thinking about cars or what he would like to do to them to make them better looking and performing whenever he sees one he likes. There is a chance he may be able to persue his dream of building custom cars and truck in the near future and turn his passion into his career so he can play around with life size toys all the rest of his life and be able to share it with others. But most importantly, he would love to pass down his passion down to his kids so he can keep the family tradition going.</p>
+						<center> <img src="f100.jpg" height"500" width="500"> </center>
+						<center> <img src="fordtruck.jpg" height"500" width="500"> </center>
  					</div>
 
 		</body>
