--- a/web2.html
+++ b/web2.html
@@ -21,14 +21,13 @@
   					</div>
   					<div class="column">
     						<h2><font color="white">Hunting</h2>
-    						<p><font color="white">Ever since Clay was given his first hunting shotgun, he was in love with hunting from then on. Throughout his life, starting as a small boy, he has hunted many times for a variety of different game. Some of the game he hunted were: dove, quail, wild boar, wild turkey, and even tree squirrels! His favorite game to hunt to this day is the wild boar due to the immense feeling of accomplishment of ending a hunt, but also a farmer's torment due to the boar's destructive affect on crops. He also looks forward to hunting elk and deer later on in his life, which will hopefully happen in the near future! </p>
+    						<p><font color="white">Ever since Clay was given his first hunting shotgun, he was in love with hunting from then on. Throughout his life, starting as a small boy, he has hunted many times for a variety of different game. Some of the game he has hunted are: dove, quail, wild boar, wild turkey, and even tree squirrels! His favorite game to hunt to this day is the wild boar due to the immense feeling of accomplishment of ending a hunt, but also being able to end a farmer's torment due to the boar's destructive effect on crops. He also looks forward to hunting elk and deer later on in his life, which will hopefully happen in the near future! </p>
 						<center> <img src="hunting.jpg" height"500" width="500"> </center>
   					</div>
   					<div class="column">
    						<h2><font color="white">Building Cars</h2>
     						<p><font color="white">The most relatively new passion of Clay's, is building cars. His first truck is a 1956 Ford F100 that he is still custom building to this day. From when he was born, he had a passion of cars passed on to him and he has turned it into a full-blow addiction. He cannot stop thinking about cars or what he would like to do to them to make them better looking and performing whenever he sees one he likes. There is a chance he may be able to persue his dream of building custom cars and truck in the near future and turn his passion into his career so he can play around with life size toys all the rest of his life and be able to share it with others. But most importantly, he would love to pass down his passion down to his kids so he can keep the family tradition going.</p>
-						<center> <img src="f100.jpg" height"500" width="500"> </center>
-						<center> <img src="fordtruck.jpg" height"500" width="500"> </center>
+						<center> <img src="f100.jpg" height"500" width="500"><img src="fordtruck.jpg" height"500" width="500"> </center>
  					</div>
 
 		</body>
