--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
   </div>
                <center> <img src="Welcome.jpg" height"500" width="500"> </center>
-               <center><font color="white"> As you have clicked on this cite, you must be wanting to learn all about the legend of a man, Clay Clements. </center>
+               <center><font color="white"> As you have clicked on this site, you must be wanting to learn all about the legend of a man, Clay Martin Clements. This man is different than a lot of people you will ever run across, he will even say himself that he is about as different and unique as it comes. He enjoys a lot of the same things as most people like music, being around friends and family, playing sports, and so on. On the other hand, he has very different things he enjoys that some people never knew existed. All those things make him into the person he is today and without them, he would just be another person in the crowd.</center>
                <center><font color="white"> Here is a small list of the some of his favorite things with links about them: </center>
                <center><table width="50%" style="background-color:black;border:2px solid white";></center>
                   <tr>
@@ -21,15 +21,18 @@
                         <th><h1><font color="white">Food</h1></th> 
                   </tr>
                   <tr>
-                        <td><font color="white"><a href="https://www.youtube.com/watch?v=guzRl2WE9dw">Horseback riding</a></td>
-                        <td><font color="white"><a href="https://www.youtube.com/watch?v=kaZjGKdbGBQ">Lacrosse</a></td>
-                        <td><font color="white"><a href="https://www.youtube.com/watch?v=9QUpTeTVPJo">Sushi</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=guzRl2WE9dw" style="color:white">Horseback riding</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=kaZjGKdbGBQ" style="color:white">Lacrosse</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=9QUpTeTVPJo" style="color:white">Sushi</a></td>
                   </tr>
                   <tr>
-                        <td><font color="white"><a href="https://www.youtube.com/watch?v=gnCqFU2Zf7Y">Hunting</a></td>
-                        <td><font color="white"><a href="https://www.youtube.com/watch?v=1TC0YsDvUcgY">Football</a></td>
-                        <td><font color="white"><a href="https://www.youtube.com/watch?v=AmC9SmCBUj4">Steak</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=gnCqFU2Zf7Y" style="color:white">Hunting</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=1TC0YsDvUcgY" style="color:white">Football</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=AmC9SmCBUj4" style="color:white">Steak</a></td>
                   </tr>
+                  <tr>
+                        <td><a href="https://www.youtube.com/watch?v=kMRt4q-E9Vc" style="color:white">Cars</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=JYdvcqAc-88" style="color:white">Racing</a></td>
                  
   </body>
   
