--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
                <hr>
   <div class="topnav">
      <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
-     <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
-     <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
+     <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies</a>
+     <a href="https://cmclements19.github.io/second-website/web3.html">Sports</a>
   </div>
                <center> <img src="Welcome.jpg" height"500" width="500"> </center>
                <center><font color="white"> As you have clicked on this site, you must be wanting to learn all about the legend of a man, Clay Martin Clements. This man is different than a lot of people you will ever run across, he will even say himself that he is about as different and unique as it comes. He enjoys a lot of the same things as most people like music, being around friends and family, playing sports, and so on. On the other hand, he has very different things he enjoys that some people never knew existed. All those things make him into the person he is today and without them, he would just be another person in the crowd.</center>
@@ -21,18 +21,20 @@
                         <th><h1><font color="white">Food</h1></th> 
                   </tr>
                   <tr>
-                        <td><a href="https://www.youtube.com/watch?v=guzRl2WE9dw" style="color:white">Horseback riding</a></td>
-                        <td><a href="https://www.youtube.com/watch?v=kaZjGKdbGBQ" style="color:white">Lacrosse</a></td>
-                        <td><a href="https://www.youtube.com/watch?v=9QUpTeTVPJo" style="color:white">Sushi</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=guzRl2WE9dw">Horseback riding</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=kaZjGKdbGBQ">Lacrosse</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=9QUpTeTVPJo">Sushi</a></td>
                   </tr>
                   <tr>
-                        <td><a href="https://www.youtube.com/watch?v=gnCqFU2Zf7Y" style="color:white">Hunting</a></td>
-                        <td><a href="https://www.youtube.com/watch?v=1TC0YsDvUcgY" style="color:white">Football</a></td>
-                        <td><a href="https://www.youtube.com/watch?v=AmC9SmCBUj4" style="color:white">Steak</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=gnCqFU2Zf7Y">Hunting</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=1TC0YsDvUcgY">Football</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=AmC9SmCBUj4">Steak</a></td>
                   </tr>
                   <tr>
-                        <td><a href="https://www.youtube.com/watch?v=kMRt4q-E9Vc" style="color:white">Cars</a></td>
-                        <td><a href="https://www.youtube.com/watch?v=JYdvcqAc-88" style="color:white">Racing</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=kMRt4q-E9Vc">Cars</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=JYdvcqAc-88">Racing</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=xE6-HYH4T1E">Breakfast Burrito</a></td>
+                 </tr>
                  
   </body>
   
