--- a/web2.html
+++ b/web2.html
@@ -8,11 +8,11 @@
                 <hr>
 		<div class="topnav">
      		   <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
-                   <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
-                   <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
+                   <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies</a>
+                   <a href="https://cmclements19.github.io/second-website/web3.html">Sports</a>
       		</div>		
 		<body>
-			<center><h1><font size="+25"/><u>Hobbies/Sports</u></h1></center>
+			<center><h1><font size="+25"/><u>Hobbies</u></h1></center>
 				<div class="row">
   					<div class="column">
     						<h2><font color="white">Horseback Riding</h2>
