--- a/web3.html
+++ b/web3.html
@@ -8,13 +8,13 @@
       <hr>
     <div class="topnav">
      <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
-     <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
-     <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
+     <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies</a>
+     <a href="https://cmclements19.github.io/second-website/web3.html">Sports</a>
     </div>
   </head>
   
       <body>
-        <center><h1><font size="+25"/><u>Early Life</u></h1></center
+        <center><h1><font size="+25"/><u>Sports</u></h1></center
         
       </body>
 
