--- a/web3.html
+++ b/web3.html
@@ -14,7 +14,26 @@
   </head>
   
       <body>
-        <center><h1><font size="+25"/><u>Sports</u></h1></center
+        <center><h1><font size="+25"/><u>Sports</u></h1></center>
+
+				<div class="row">
+  					<div class="column">
+    						<h2><font color="white">Lacrosse</h2>
+    						<p><font color="white">Clay's passion for riding and training horses started from when he was born. As soon as he was born, his mother threw him on a horse and he was addicted ever since. The passion for horses has made him into the person he is today and he always says that when he rides, it brings him to his inner peace and harmony. His love for horses will never die and he will strive to make himself a better horseman every time he gets on a horse.</p>
+						<center> <img src="clayhorse.JPG" height"500" width="500"> </center>
+  					</div>
+  					<div class="column">
+    						<h2><font color="white">Football</h2>
+    						<p><font color="white">Ever since Clay was given his first hunting shotgun, he was in love with hunting from then on. Throughout his life, starting as a small boy, he has hunted many times for a variety of different game. Some of the game he has hunted are: dove, quail, wild boar, wild turkey, and even tree squirrels! His favorite game to hunt to this day is the wild boar due to the immense feeling of accomplishment of ending a hunt, but also being able to end a farmer's torment due to the boar's destructive effect on crops. He also looks forward to hunting elk and deer later on in his life, which will hopefully happen in the near future! </p>
+						<center> <img src="hunting.jpg" height"500" width="500"> </center>
+  					</div>
+  					<div class="column">
+   						<h2><font color="white">Racing</h2>
+    						<p><font color="white">The most relatively new passion of Clay's, is building cars. His first truck is a 1956 Ford F100 that he is still custom building to this day. From when he was born, he had a passion of cars passed on to him and he has turned it into a full-blow addiction. He cannot stop thinking about cars or what he would like to do to them to make them better looking and performing whenever he sees one he likes. There is a chance he may be able to persue his dream of building custom cars and truck in the near future and turn his passion into his career so he can play around with life size toys all the rest of his life and be able to share it with others. But most importantly, he would love to pass down his passion down to his kids so he can keep the family tradition going.</p>
+						<center> <img src="f100.jpg" height"600" width="500"><img src="fordtruck.jpg" height"400" width="500"> </center>
+ 					</div>
+
+		</body>
         
       </body>
 
