--- a/web3.html
+++ b/web3.html
@@ -19,8 +19,8 @@
 				<div class="row">
   					<div class="column">
     						<h2><font color="white">Lacrosse</h2>
-    						<p><font color="white">Clay's passion for riding and training horses started from when he was born. As soon as he was born, his mother threw him on a horse and he was addicted ever since. The passion for horses has made him into the person he is today and he always says that when he rides, it brings him to his inner peace and harmony. His love for horses will never die and he will strive to make himself a better horseman every time he gets on a horse.</p>
-						<center> <img src="clayhorse.JPG" height"500" width="500"> </center>
+    						<p><font color="white">Lacrosse is Clay's most recent new found love in his life. He just started playing three years ago and felt apart of the lacrosse lifestyle from the start. He has always know he was Native American but never was able to actually get in touch with his heritage until he found lacrosse. To him, lacrosse is more than a game, it is called the "Medicine Game" in the Native communities because it is a healing game. When you play the Creator's game, it brings you one with Earth and the Creator. Which then ultimatly makes you feel at peace playing for your brothers and the Creator, but most importantly keeping the heritage alive. He hopes to always play the game until he dies and then pass on the game to his children so they can experience the Medicine Game and be one with the Creator. </p>
+						<center> <img src="lacrosse1.jpg" height"500" width="500"> <img src="lacrosse2.jpg" height"500" width="500"> </center>
   					</div>
   					<div class="column">
     						<h2><font color="white">Football</h2>
