--- a/web3.html
+++ b/web3.html
@@ -20,12 +20,12 @@
   					<div class="column">
     						<h2><font color="white">Lacrosse</h2>
     						<p><font color="white">Lacrosse is Clay's most recent new found love in his life. He just started playing three years ago and felt apart of the lacrosse lifestyle from the start. He has always know he was Native American but never was able to actually get in touch with his heritage until he found lacrosse. To him, lacrosse is more than a game, it is called the "Medicine Game" in the Native communities because it is a healing game. When you play the Creator's game, it brings you one with Earth and the Creator. Which then ultimatly makes you feel at peace playing for your brothers and the Creator, but most importantly keeping the heritage alive. He hopes to always play the game until he dies and then pass on the game to his children so they can experience the Medicine Game and be one with the Creator. </p>
-						<center> <img src="lacrosse1.jpg" height"500" width="500"> <img src="lacrosse2.jpg" height"500" width="500"> </center>
+						<center> <img src="lacrosse1.JPG" height"500" width="500"> <img src="lacrosse2.JPG" height"500" width="500"> </center>
   					</div>
   					<div class="column">
     						<h2><font color="white">Football</h2>
-    						<p><font color="white">Ever since Clay was given his first hunting shotgun, he was in love with hunting from then on. Throughout his life, starting as a small boy, he has hunted many times for a variety of different game. Some of the game he has hunted are: dove, quail, wild boar, wild turkey, and even tree squirrels! His favorite game to hunt to this day is the wild boar due to the immense feeling of accomplishment of ending a hunt, but also being able to end a farmer's torment due to the boar's destructive effect on crops. He also looks forward to hunting elk and deer later on in his life, which will hopefully happen in the near future! </p>
-						<center> <img src="hunting.jpg" height"500" width="500"> </center>
+    						<p><font color="white">The sport of football was Clay's first sport he ever played. He grew to love it through middle school and especially loved playing tight-end and becoming the MVP of his team with the most points for the season. Once he was in highschool he stopped playing football and moved on to just watching college and pro football whenever he can. He loves watching his Green Bay Packers play and also his two favorite college teams, USC and Ohio State. Although he misses playing the sport, he is fine with just spectating because his heart is stuck on lacrosse.</p>
+						<center> <img src="claymatthews.jpg" height"500" width="500"> </center>
   					</div>
   					<div class="column">
    						<h2><font color="white">Racing</h2>
