--- a/web3.html
+++ b/web3.html
@@ -24,13 +24,13 @@
   					</div>
   					<div class="column">
     						<h2><font color="white">Football</h2>
-    						<p><font color="white">The sport of football was Clay's first sport he ever played. He grew to love it through middle school and especially loved playing tight-end and becoming the MVP of his team with the most points for the season. Once he was in highschool he stopped playing football and moved on to just watching college and pro football whenever he can. He loves watching his Green Bay Packers play and also his two favorite college teams, USC and Ohio State. Although he misses playing the sport, he is fine with just spectating because his heart is stuck on lacrosse.</p>
+    						<p><font color="white">The sport of football was Clay's first contact sport he ever played. He grew to love it through middle school and especially loved playing tight-end and becoming the MVP of his team with the most points for the season. Once he was in highschool he stopped playing football and moved on to just watching college and pro football whenever he can. He loves watching his Green Bay Packers play and also his two favorite college teams, USC and Ohio State. Although he misses playing the sport, he is fine with just spectating because his heart is stuck on lacrosse.</p>
 						<center> <img src="claymatthews.jpg" height"500" width="500"> </center>
   					</div>
   					<div class="column">
    						<h2><font color="white">Racing</h2>
-    						<p><font color="white">The most relatively new passion of Clay's, is building cars. His first truck is a 1956 Ford F100 that he is still custom building to this day. From when he was born, he had a passion of cars passed on to him and he has turned it into a full-blow addiction. He cannot stop thinking about cars or what he would like to do to them to make them better looking and performing whenever he sees one he likes. There is a chance he may be able to persue his dream of building custom cars and truck in the near future and turn his passion into his career so he can play around with life size toys all the rest of his life and be able to share it with others. But most importantly, he would love to pass down his passion down to his kids so he can keep the family tradition going.</p>
-						<center> <img src="f100.jpg" height"600" width="500"><img src="fordtruck.jpg" height"400" width="500"> </center>
+    						<p><font color="white">Although some may say that racing is not a sport, Clay thinks it for sure is because he once raced. When he was young, his dad bought him a racing gocart and took him to tracks to practice and race for fun against friends. Athlough he did not do it for long, he loved racing when he was doing it and would love to do it again anytime he could. As he says,"There is nothing like the thrill of speed!"</p>
+						<center> <img src="gocart.jpg" height"600" width="500"></center>
  					</div>
 
 		</body>
